Fix build with ffmpeg >= 8

BUG: 509501